# mango

./: .eslintrc.js  .gitattributes  .gitignore  .lycheeignore  CODE_OF_CONDUCT.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-docs  README.md  deny.toml  parameters  prettier.config.js
consensus/core/: Cargo.toml
consensus/core/src/: authority_node.rs  authority_signature.rs  base_committer.rs  block.rs  block_manager.rs  block_verifier.rs  commit.rs  context.rs  core.rs  core_thread.rs  dag_state.rs  error.rs  leader_schedule.rs  leader_timeout.rs  lib.rs  metrics.rs  stake_aggregator.rs  test_dag.rs  threshold_clock.rs  transactions_client.rs  universal_committer.rs
crates/mango-metrics/: Cargo.toml
crates/mango-metrics/src/: guards.rs  histogram.rs  lib.rs  metered_channel.rs
crates/mango-service/: Cargo.toml
crates/mango-service-boilerplate/: Cargo-mgo.toml  Cargo.toml
crates/mango-service-boilerplate/src/: main.rs
crates/mango-service/src/: health.rs  lib.rs  logging.rs  metrics.rs  service.rs
crates/mango-service/tests/: integration_test.rs
crates/mango-util-mem-derive/: Cargo.toml  lib.rs
crates/mgo-aws-orchestrator/: Cargo.toml
crates/mgo-aws-orchestrator/assets/: grafana-dashboard-narwhal-only.json  grafana-dashboard-narwhal.json  plot.py  settings-template.json
crates/mgo-aws-orchestrator/src/: benchmark.rs  display.rs  error.rs  faults.rs  logs.rs  main.rs  measurement.rs  monitor.rs  orchestrator.rs  settings.rs  ssh.rs  testbed.rs
crates/mgo-benchmark/: Cargo.toml
crates/mgo-benchmark/src/: bank.rs  benchmark_setup.rs  embedded_reconfig_observer.rs  fullnode_reconfig_observer.rs  in_memory_wallet.rs  lib.rs  options.rs  system_state_observer.rs  util.rs
crates/mgo-benchmark/tests/: simtest.rs
crates/mgo-bridge/: Cargo.toml
crates/mgo-bridge/abi/: mgo_bridge.json
crates/mgo-bridge/src/: abi.rs  action_executor.rs  config.rs  crypto.rs  error.rs  eth_client.rs  eth_mock_provider.rs  eth_syncer.rs  events.rs  lib.rs  main.rs  mgo_client.rs  mgo_mock_client.rs  mgo_syncer.rs  mgo_transaction_builder.rs  orchestrator.rs  storage.rs  test_utils.rs  types.rs
crates/mgo-cluster-test/: Cargo.toml
crates/mgo-cluster-test/src/: cluster.rs  config.rs  faucet.rs  helper.rs  lib.rs  main.rs  test_case.rs  wallet_client.rs
crates/mgo-cluster-test/tests/: local_cluster_test.rs
crates/mgo-common/: Cargo.toml
crates/mgo-common/src/: authority_aggregation.rs  lib.rs
crates/mgo-config/: Cargo.toml
crates/mgo-config/data/: fullnode-template-with-path.yaml  fullnode-template.yaml
crates/mgo-config/src/: certificate_deny_config.rs  genesis.rs  lib.rs  local_ip_utils.rs  node.rs  node_config_metrics.rs  object_storage_config.rs  p2p.rs  test_gateway.yml  transaction_deny_config.rs
crates/mgo-core/: Cargo.toml
crates/mgo-core/benches/: batch_verification_bench.rs  verified_cert_cache_bench.rs
crates/mgo-core/src/: authority.rs  authority_aggregator.rs  authority_client.rs  authority_server.rs  consensus_adapter.rs  consensus_handler.rs  consensus_throughput_calculator.rs  consensus_validator.rs  db_checkpoint_handler.rs  execution_driver.rs  generate_format.rs  in_mem_execution_cache.rs  lib.rs  metrics.rs  module_cache_metrics.rs  mysticeti_adapter.rs  overload_monitor.rs  post_consensus_tx_reorder.rs  runtime.rs  safe_client.rs  scoring_decision.rs  signature_verifier.rs  stake_aggregator.rs  state_accumulator.rs  storage.rs  streamer.rs  subscription_handler.rs  test_authority_clients.rs  test_utils.rs  transaction_input_loader.rs  transaction_manager.rs  transaction_orchestrator.rs  transaction_outputs.rs  transaction_signing_filter.rs  verify_indexes.rs
crates/mgo-core/tests/: format.rs
crates/mgo-cost/: Cargo.toml
crates/mgo-cost/tests/: empirical_transaction_cost.rs
crates/mgo-e2e-tests/: Cargo.toml
crates/mgo-e2e-tests/tests/: checkpoint_tests.rs  coin_deny_list_tests.rs  dynamic_committee_tests.rs  full_node_tests.rs  multisig_tests.rs  object_deletion_tests.rs  onsite_reconfig_observer_tests.rs  protocol_version_tests.rs  randomness_tests.rs  readme.rs  reconfiguration_tests.rs  sdk_stream_tests.rs  shared_objects_tests.rs  shared_objects_version_tests.rs  simulator_tests.rs  snapshot_tests.rs  transaction_orchestrator_tests.rs  transfer_to_object_tests.rs  zklogin_tests.rs
crates/mgo-faucet/: Cargo.toml  faucet.md
crates/mgo-faucet/src/: errors.rs  lib.rs  main.rs  metrics.rs  metrics_layer.rs  requests.rs  responses.rs
crates/mgo-framework/: Cargo.toml  README.md  build.rs
crates/mgo-framework-snapshot/: Cargo.toml  README.txt  manifest.json
crates/mgo-framework-snapshot/src/: lib.rs  main.rs
crates/mgo-framework-snapshot/tests/: compatibility_tests.rs
crates/mgo-framework-tests/: Cargo.toml
crates/mgo-framework-tests/src/: lib.rs  metered_verifier.rs  unit_tests.rs
crates/mgo-framework/src/: lib.rs
crates/mgo-genesis-builder/: Cargo.toml
crates/mgo-genesis-builder/src/: lib.rs  validator_info.rs
crates/mgo-graphql-rpc/: Cargo.toml  README.md
crates/mgo-graphql-rpc-client/: Cargo.toml
crates/mgo-graphql-rpc-client/src/: lib.rs  response.rs  simple_client.rs
crates/mgo-graphql-rpc/schema/: current_progress_schema.graphql  draft_target_schema.graphql
crates/mgo-graphql-rpc/src/: commands.rs  config.rs  consistency.rs  data.rs  error.rs  examples.rs  functional_group.rs  lib.rs  main.rs  metrics.rs  mutation.rs  raw_query.rs
crates/mgo-graphql-rpc/tests/: e2e_tests.rs  examples_validation_tests.rs  snapshot_tests.rs
crates/mgo-indexer/: Cargo.toml  indexer.md
crates/mgo-indexer/benches/: indexer_benchmark.rs
crates/mgo-indexer/src/: errors.rs  indexer_reader.rs  indexer_v2.rs  (+11 more)
crates/mgo-json/: Cargo.toml
crates/mgo-json-rpc/: Cargo.toml
crates/mgo-json-rpc-api/: Cargo.toml
crates/mgo-json-rpc-tests/: Cargo.toml
crates/mgo-json-rpc-types/: Cargo.toml
crates/mgo-keys/: Cargo.toml
mgo-execution/: Cargo.toml
mgo-execution/cut/: Cargo.toml
mgo-execution/src/: executor.rs  latest.rs  lib.rs  lib.template.rs  next_vm.rs  tests.rs  v0.rs  v1.rs  verifier.rs
(+2582 files in other folders)
