[package]
name = "mgo-execution"
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
mgo-protocol-config.workspace = true
mgo-types.workspace = true

move-binary-format.workspace = true
move-vm-config.workspace = true

mgo-adapter-latest = { path = "latest/mgo-adapter" }
mgo-adapter-v0 = { path = "v0/mgo-adapter" }
mgo-adapter-v1 = { path = "v1/mgo-adapter" }
mgo-adapter-next-vm = { path = "next-vm/mgo-adapter" }
# mgo-adapter-$CUT = { path = "$CUT/mgo-adapter" }
mgo-move-natives-latest = { path = "latest/mgo-move-natives" }
mgo-move-natives-v0 = { path = "v0/mgo-move-natives" }
mgo-move-natives-v1 = { path = "v1/mgo-move-natives" }
mgo-move-natives-next-vm = { path = "next-vm/mgo-move-natives" }
# mgo-move-natives-$CUT = { path = "$CUT/mgo-move-natives" }
mgo-verifier-latest = { path = "latest/mgo-verifier" }
mgo-verifier-v0 = { path = "v0/mgo-verifier" }
mgo-verifier-v1 = { path = "v1/mgo-verifier" }
mgo-verifier-next-vm = { path = "next-vm/mgo-verifier" }
# mgo-verifier-$CUT = { path = "$CUT/mgo-verifier" }

move-bytecode-verifier-latest = { path = "../external-crates/move/crates/move-bytecode-verifier", package = "move-bytecode-verifier" }
move-bytecode-verifier-v0 = { path = "../external-crates/move/move-execution/v0/move-bytecode-verifier" }
move-bytecode-verifier-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-bytecode-verifier" }
move-bytecode-verifier-next-vm = { path = "../external-crates/move/move-execution/next-vm/crates/move-bytecode-verifier" }
# move-bytecode-verifier-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-bytecode-verifier" }
move-vm-runtime-latest = { path = "../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }
move-vm-runtime-v0 = { path = "../external-crates/move/move-execution/v0/move-vm/runtime" }
move-vm-runtime-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-vm-runtime" }
move-vm-runtime-next-vm = { path = "../external-crates/move/move-execution/next-vm/crates/move-vm-runtime" }
# move-vm-runtime-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-runtime" }
workspace-hack.workspace = true

[dev-dependencies]
cargo_metadata = "0.15.4"
petgraph = "0.5.1"

[features]
default = []
gas-profiler = [
    "mgo-adapter-latest/gas-profiler",
    "mgo-adapter-v0/gas-profiler",
    "mgo-adapter-v1/gas-profiler",
#   "mgo-adapter-$CUT/gas-profiler",
    "move-vm-runtime-next-vm/gas-profiler",
    "move-vm-runtime-v0/gas-profiler",
    "move-vm-runtime-v1/gas-profiler",
    "move-vm-runtime-latest/gas-profiler",
#   "move-vm-runtime-$CUT/gas-profiler",
    "move-vm-config/gas-profiler",
]
