[package]
name = "mango-service-boilerplate"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
mango-service.workspace = true
prometheus.workspace = true
tracing.workspace = true
axum.workspace = true
workspace-hack.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
