[package]
name = "mango-service"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
workspace-hack.workspace = true
prometheus.workspace = true
mango-metrics.workspace = true
telemetry-subscribers.workspace = true
tracing.workspace = true

[dev-dependencies]
tower.workspace = true
serde_json.workspace = true
