[package]
name = "mgo-benchmark"
version = "0.0.0"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
tokio = { workspace = true, features = ["full"] }
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
clap.workspace = true
prometheus.workspace = true
rand.workspace = true
indicatif.workspace = true
duration-str.workspace = true
hdrhistogram.workspace = true
comfy-table.workspace = true
bcs.workspace = true
tokio-util.workspace = true
mgo-core.workspace = true
mgo-config.workspace = true
mgo-network.workspace = true
mgo-storage.workspace = true
mgo-types.workspace = true
mgo-sdk.workspace = true
mgo-keys.workspace = true
mgo-json-rpc-types.workspace = true
mgo-protocol-config.workspace = true
mgo-test-transaction-builder.workspace = true
mgo-swarm-config.workspace = true
telemetry-subscribers.workspace = true
roaring.workspace = true
regex.workspace = true
fastcrypto-zkp.workspace = true

move-core-types.workspace = true
mango-metrics.workspace = true
narwhal-node.workspace = true
test-cluster.workspace = true
sysinfo.workspace = true
workspace-hack.workspace = true

[target.'cfg(msim)'.dependencies]
mgo-framework.workspace = true
mgo-framework-snapshot.workspace = true
mgo-macros.workspace = true
mgo-simulator.workspace = true
typed-store.workspace = true

[features]
benchmark = ["narwhal-node/benchmark"]
