[package]
name = "mgo-cluster-test"
version = "0.1.0"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
futures.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
jsonrpsee.workspace = true
tracing.workspace = true
clap.workspace = true
reqwest.workspace = true
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
uuid.workspace = true
prometheus.workspace = true
fastcrypto.workspace = true
shared-crypto.workspace = true
derivative.workspace = true
regex.workspace = true

mgo-indexer.workspace = true
mgo-faucet.workspace = true
mgo-graphql-rpc.workspace = true
mgo-swarm.workspace = true
mgo.workspace = true
mgo-swarm-config.workspace = true
mgo-json-rpc-types.workspace = true
mgo-sdk.workspace = true
mgo-keys.workspace = true
mgo-types.workspace = true
mgo-core.workspace = true
mgo-json.workspace = true
mgo-config.workspace = true
mgo-test-transaction-builder.workspace = true
telemetry-subscribers.workspace = true

test-cluster.workspace = true
move-core-types.workspace = true
workspace-hack.workspace = true

[features]
pg_integration = []
