[package]
name = "mgo-common"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mgo-types.workspace = true
mango-metrics.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
workspace-hack.workspace = true
