[package]
name = "mgo-core"
version = "0.1.0"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
arc-swap.workspace = true
async-trait.workspace = true
bcs.workspace = true
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
diffy = { version = "0.3", default-features = false }
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
futures.workspace = true
im.workspace = true
indexmap.workspace = true
itertools.workspace = true
lru.workspace = true
mockall.workspace = true
num_cpus.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
roaring.workspace = true
rocksdb.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signature.workspace = true
static_assertions.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-retry.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
fastcrypto-zkp.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
mango-common.workspace = true
mango-network.workspace = true
telemetry-subscribers.workspace = true
typed-store-derive.workspace = true
typed-store.workspace = true

mango-metrics.workspace = true
narwhal-config.workspace = true
narwhal-crypto.workspace = true
narwhal-executor.workspace = true
narwhal-network.workspace = true
narwhal-node.workspace = true
narwhal-test-utils.workspace = true
narwhal-types.workspace = true
narwhal-worker.workspace = true
shared-crypto.workspace = true
mgo-archival.workspace = true
mgo-config.workspace = true
mgo-authority-aggregation.workspace = true
mgo-execution = { path = "../../mgo-execution" }
mgo-framework.workspace = true
mgo-swarm-config.workspace = true
mgo-genesis-builder.workspace = true
mgo-json-rpc-types.workspace = true
mgo-macros.workspace = true
mgo-move-build.workspace = true
mgo-network.workspace = true
mgo-protocol-config.workspace = true
mgo-transaction-checks.workspace = true
mgo-simulator.workspace = true
mgo-storage.workspace = true
mgo-types.workspace = true
workspace-hack.workspace = true
zeroize.workspace = true
mysticeti-core = { git = "https://github.com/mango-developer/mysticeti.git", rev = "77466b61fd6826e559b01f0a70b7ee501cef5975" }

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
expect-test.workspace = true
fs_extra.workspace = true
more-asserts.workspace = true
pretty_assertions.workspace = true
serde-reflection.workspace = true
serde_yaml.workspace = true

test-cluster.workspace = true
move-symbol-pool.workspace = true

mgo-test-transaction-builder.workspace = true
mgo-types = { workspace = true, features = ["test-utils"] }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof.workspace = true
test-fuzz.workspace = true

mgo-macros.workspace = true
mgo-protocol-config.workspace = true

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false

[[bench]]
name = "verified_cert_cache_bench"
harness = false

[[bench]]
name = "batch_verification_bench"
harness = false

[features]
test-utils = []
