[package]
name = "mgo-cost"
version = "0.1.0"
authors = ["MangoNet Labs <build@mangonetlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
mgo-types.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
bcs.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
insta.workspace = true
test-cluster.workspace = true
mgo-config.workspace = true
mgo-swarm-config.workspace = true
mgo-test-transaction-builder.workspace = true
mgo-move-build.workspace = true
move-cli.workspace = true
move-disassembler.workspace = true
mgo-json-rpc-types.workspace = true
